<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MSiC</string>

    <string name="activity_mapa_name">Location Map</string>
    <string name="activity_listado_name">List</string>
    <string name="activity_preferences">Settings</string>

    <string name="hello_world" translatable="false">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_mapa">Map Location</string>
    <string name="action_listado">List</string>
    <string name="action_refresh" translatable="false">Refresh DB</string>

    <string name="search_title">Search</string>
    <string name="search_hint">common name</string>
    <string name="search_title_todos">All</string>

    <string name="sync_account_type" translatable="false">msic.conaculta.gob.mx</string>
    <string name="content_authority" translatable="false">mx.gob.conaculta.msic.app</string>
    <string name="title_activity_ficha">Record</string>
    <string name="action_problema">Problems</string>
    <string name="action_mmapa" translatable="false">MultiMapa</string>
    <string name="action_share">Share</string>

    <string name="pref_distance_key" >distance</string>
    <string name="pref_distance_label">Search distance in km</string>
    <string name="pref_distance_default" translatable="false">30</string>



    <string-array name="titulos_array">
        <item>Home</item>
    <item>Listado</item>
    <item>Mapa</item>
    <item>Busqueda</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


</resources>
