<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools" tools:context=".ListadoRecActivity">


    <item android:id="@+id/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_title"
        android:orderInCategory="50"
        app:showAsAction="collapseActionView|ifRoom" />

    <item android:id="@+id/search_todos" android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/search_title_todos" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_mapa" android:orderInCategory="150"
        android:icon="@drawable/ic_place_white_48dp"
        android:title="@string/action_mapa" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings" android:orderInCategory="200"
        android:title="@string/action_settings" app:showAsAction="never" />

    <item android:id="@+id/action_refresh" android:orderInCategory="250"
        android:title="@string/action_refresh" app:showAsAction="never" />
</menu>